--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -228,3 +228,4 @@ Temporary commit content 2412
 Temporary commit content 2421
 Temporary commit content 2432
 Temporary commit content 2467
+Temporary commit content 2472
