Enhanced UI responsiveness

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -224,3 +224,4 @@ Temporary commit content 2381
 Temporary commit content 2391
 Temporary commit content 2392
 Temporary commit content 2395
+Temporary commit content 2412
