Added validation for user input

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -104,3 +104,4 @@ Temporary commit content 988
 Temporary commit content 998
 Temporary commit content 1002
 Temporary commit content 1010
+Temporary commit content 1062
