Updated project documentation

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -82,3 +82,4 @@ Temporary commit content 725
 Temporary commit content 738
 Temporary commit content 744
 Temporary commit content 767
+Temporary commit content 792
