Improved error handling logic

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -240,3 +240,4 @@ Temporary commit content 2572
 Temporary commit content 2573
 Temporary commit content 2576
 Temporary commit content 2593
+Temporary commit content 2608
