Improved error handling logic

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -165,3 +165,4 @@ Temporary commit content 1669
 Temporary commit content 1675
 Temporary commit content 1677
 Temporary commit content 1679
+Temporary commit content 1680
