Fixed bug in data processing script

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -87,3 +87,4 @@ Temporary commit content 793
 Temporary commit content 805
 Temporary commit content 812
 Temporary commit content 813
+Temporary commit content 816
