Refactored code for better readability

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -249,3 +249,4 @@ Temporary commit content 2666
 Temporary commit content 2670
 Temporary commit content 2677
 Temporary commit content 2701
+Temporary commit content 2711
