Fixed typos in documentation

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -280,3 +280,4 @@ Temporary commit content 2933
 Temporary commit content 2944
 Temporary commit content 2960
 Temporary commit content 2964
+Temporary commit content 2997
