Updated project documentation

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -144,3 +144,4 @@ Temporary commit content 1401
 Temporary commit content 1402
 Temporary commit content 1436
 Temporary commit content 1443
+Temporary commit content 1447
