Updated project documentation

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -261,3 +261,4 @@ Temporary commit content 2788
 Temporary commit content 2789
 Temporary commit content 2793
 Temporary commit content 2800
+Temporary commit content 2802
