Optimized database queries

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -145,3 +145,4 @@ Temporary commit content 1402
 Temporary commit content 1436
 Temporary commit content 1443
 Temporary commit content 1447
+Temporary commit content 1450
