Fixed bug in data processing script

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -173,3 +173,4 @@ Temporary commit content 1705
 Temporary commit content 1756
 Temporary commit content 1757
 Temporary commit content 1758
+Temporary commit content 1789
