Added validation for user input

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -222,3 +222,4 @@ Temporary commit content 2359
 Temporary commit content 2372
 Temporary commit content 2381
 Temporary commit content 2391
+Temporary commit content 2392
