Added initial project plan

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -158,3 +158,4 @@ Temporary commit content 1553
 Temporary commit content 1573
 Temporary commit content 1583
 Temporary commit content 1600
+Temporary commit content 1634
