Improved error handling logic

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -176,3 +176,4 @@ Temporary commit content 1758
 Temporary commit content 1789
 Temporary commit content 1792
 Temporary commit content 1806
+Temporary commit content 1809
