Improved error handling logic

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -232,3 +232,4 @@ Temporary commit content 2472
 Temporary commit content 2479
 Temporary commit content 2498
 Temporary commit content 2539
+Temporary commit content 2557
