Updated README with new features

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -193,3 +193,4 @@ Temporary commit content 1969
 Temporary commit content 1970
 Temporary commit content 2014
 Temporary commit content 2021
+Temporary commit content 2028
