Fixed bug in data processing script

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -254,3 +254,4 @@ Temporary commit content 2712
 Temporary commit content 2721
 Temporary commit content 2725
 Temporary commit content 2734
+Temporary commit content 2754
