Added validation for user input

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -41,3 +41,4 @@ Temporary commit content 403
 Temporary commit content 408
 Temporary commit content 424
 Temporary commit content 441
+Temporary commit content 444
