Updated README with new features

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -213,3 +213,4 @@ Temporary commit content 2249
 Temporary commit content 2261
 Temporary commit content 2277
 Temporary commit content 2307
+Temporary commit content 2323
