Optimized database queries

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -264,3 +264,4 @@ Temporary commit content 2800
 Temporary commit content 2802
 Temporary commit content 2808
 Temporary commit content 2813
+Temporary commit content 2824
