Refactored code for better readability

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -162,3 +162,4 @@ Temporary commit content 1634
 Temporary commit content 1654
 Temporary commit content 1664
 Temporary commit content 1669
+Temporary commit content 1675
