Improved error handling logic

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -221,3 +221,4 @@ Temporary commit content 2344
 Temporary commit content 2359
 Temporary commit content 2372
 Temporary commit content 2381
+Temporary commit content 2391
