Added initial project plan

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -116,3 +116,4 @@ Temporary commit content 1118
 Temporary commit content 1137
 Temporary commit content 1138
 Temporary commit content 1144
+Temporary commit content 1159
