Optimized database queries

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -48,3 +48,4 @@ Temporary commit content 448
 Temporary commit content 452
 Temporary commit content 458
 Temporary commit content 464
+Temporary commit content 466
