Improved error handling logic

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -243,3 +243,4 @@ Temporary commit content 2593
 Temporary commit content 2608
 Temporary commit content 2619
 Temporary commit content 2621
+Temporary commit content 2643
