Fixed bug in data processing script

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -130,3 +130,4 @@ Temporary commit content 1247
 Temporary commit content 1278
 Temporary commit content 1292
 Temporary commit content 1293
+Temporary commit content 1294
