Optimized database queries

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -174,3 +174,4 @@ Temporary commit content 1756
 Temporary commit content 1757
 Temporary commit content 1758
 Temporary commit content 1789
+Temporary commit content 1792
