--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -60,3 +60,4 @@ Temporary commit content 597
 Temporary commit content 599
 Temporary commit content 600
 Temporary commit content 603
+Temporary commit content 606
