Updated README with new features

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -167,3 +167,4 @@ Temporary commit content 1677
 Temporary commit content 1679
 Temporary commit content 1680
 Temporary commit content 1681
+Temporary commit content 1682
