Fixed typos in documentation

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -77,3 +77,4 @@ Temporary commit content 688
 Temporary commit content 700
 Temporary commit content 712
 Temporary commit content 713
+Temporary commit content 714
