Fixed bug in data processing script

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -231,3 +231,4 @@ Temporary commit content 2467
 Temporary commit content 2472
 Temporary commit content 2479
 Temporary commit content 2498
+Temporary commit content 2539
