Refactored code for better readability

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -52,3 +52,4 @@ Temporary commit content 466
 Temporary commit content 498
 Temporary commit content 518
 Temporary commit content 552
+Temporary commit content 556
