Added initial project plan

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -126,3 +126,4 @@ Temporary commit content 1233
 Temporary commit content 1235
 Temporary commit content 1238
 Temporary commit content 1239
+Temporary commit content 1247
