Enhanced UI responsiveness

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -204,3 +204,4 @@ Temporary commit content 2137
 Temporary commit content 2160
 Temporary commit content 2181
 Temporary commit content 2188
+Temporary commit content 2210
