Updated project documentation

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -133,3 +133,4 @@ Temporary commit content 1293
 Temporary commit content 1294
 Temporary commit content 1305
 Temporary commit content 1322
+Temporary commit content 1323
