Updated README with new features

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -209,3 +209,4 @@ Temporary commit content 2212
 Temporary commit content 2225
 Temporary commit content 2233
 Temporary commit content 2240
+Temporary commit content 2249
