Improved error handling logic

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -97,3 +97,4 @@ Temporary commit content 883
 Temporary commit content 922
 Temporary commit content 944
 Temporary commit content 955
+Temporary commit content 959
