Optimized database queries

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -124,3 +124,4 @@ Temporary commit content 1212
 Temporary commit content 1227
 Temporary commit content 1233
 Temporary commit content 1235
+Temporary commit content 1238
