Optimized database queries

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -244,3 +244,4 @@ Temporary commit content 2608
 Temporary commit content 2619
 Temporary commit content 2621
 Temporary commit content 2643
+Temporary commit content 2653
