Added validation for user input

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -171,3 +171,4 @@ Temporary commit content 1682
 Temporary commit content 1700
 Temporary commit content 1705
 Temporary commit content 1756
+Temporary commit content 1757
