Fixed bug in data processing script

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -80,3 +80,4 @@ Temporary commit content 713
 Temporary commit content 714
 Temporary commit content 725
 Temporary commit content 738
+Temporary commit content 744
