Added validation for user input

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -51,3 +51,4 @@ Temporary commit content 464
 Temporary commit content 466
 Temporary commit content 498
 Temporary commit content 518
+Temporary commit content 552
