Updated README with new features

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -192,3 +192,4 @@ Temporary commit content 1945
 Temporary commit content 1969
 Temporary commit content 1970
 Temporary commit content 2014
+Temporary commit content 2021
