Improved error handling logic

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -175,3 +175,4 @@ Temporary commit content 1757
 Temporary commit content 1758
 Temporary commit content 1789
 Temporary commit content 1792
+Temporary commit content 1806
