Fixed typos in documentation

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -168,3 +168,4 @@ Temporary commit content 1679
 Temporary commit content 1680
 Temporary commit content 1681
 Temporary commit content 1682
+Temporary commit content 1700
