Fixed typos in documentation

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -251,3 +251,4 @@ Temporary commit content 2677
 Temporary commit content 2701
 Temporary commit content 2711
 Temporary commit content 2712
+Temporary commit content 2721
