Updated README with new features

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -120,3 +120,4 @@ Temporary commit content 1159
 Temporary commit content 1165
 Temporary commit content 1169
 Temporary commit content 1174
+Temporary commit content 1212
