Updated project documentation

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -75,3 +75,4 @@ Temporary commit content 667
 Temporary commit content 684
 Temporary commit content 688
 Temporary commit content 700
+Temporary commit content 712
