Fixed bug in data processing script

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -269,3 +269,4 @@ Temporary commit content 2832
 Temporary commit content 2863
 Temporary commit content 2868
 Temporary commit content 2869
+Temporary commit content 2877
