Updated README with new features

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -163,3 +163,4 @@ Temporary commit content 1654
 Temporary commit content 1664
 Temporary commit content 1669
 Temporary commit content 1675
+Temporary commit content 1677
