Refactored code for better readability

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -69,3 +69,4 @@ Temporary commit content 627
 Temporary commit content 630
 Temporary commit content 636
 Temporary commit content 643
+Temporary commit content 664
