Fixed typos in documentation

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -105,3 +105,4 @@ Temporary commit content 998
 Temporary commit content 1002
 Temporary commit content 1010
 Temporary commit content 1062
+Temporary commit content 1069
