Updated project documentation

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -212,3 +212,4 @@ Temporary commit content 2240
 Temporary commit content 2249
 Temporary commit content 2261
 Temporary commit content 2277
+Temporary commit content 2307
