Refactored code for better readability

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -245,3 +245,4 @@ Temporary commit content 2619
 Temporary commit content 2621
 Temporary commit content 2643
 Temporary commit content 2653
+Temporary commit content 2666
