Improved error handling logic

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -92,3 +92,4 @@ Temporary commit content 856
 Temporary commit content 859
 Temporary commit content 860
 Temporary commit content 866
+Temporary commit content 882
