Added validation for user input

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -247,3 +247,4 @@ Temporary commit content 2643
 Temporary commit content 2653
 Temporary commit content 2666
 Temporary commit content 2670
+Temporary commit content 2677
