Improved error handling logic

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -252,3 +252,4 @@ Temporary commit content 2701
 Temporary commit content 2711
 Temporary commit content 2712
 Temporary commit content 2721
+Temporary commit content 2725
