Optimized database queries

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -61,3 +61,4 @@ Temporary commit content 599
 Temporary commit content 600
 Temporary commit content 603
 Temporary commit content 606
+Temporary commit content 609
