Added validation for user input

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -98,3 +98,4 @@ Temporary commit content 922
 Temporary commit content 944
 Temporary commit content 955
 Temporary commit content 959
+Temporary commit content 969
