Improved error handling logic

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -278,3 +278,4 @@ Temporary commit content 2919
 Temporary commit content 2921
 Temporary commit content 2933
 Temporary commit content 2944
+Temporary commit content 2960
