Added validation for user input

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -57,3 +57,4 @@ Temporary commit content 561
 Temporary commit content 571
 Temporary commit content 584
 Temporary commit content 597
+Temporary commit content 599
