Refactored code for better readability

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -258,3 +258,4 @@ Temporary commit content 2754
 Temporary commit content 2755
 Temporary commit content 2759
 Temporary commit content 2788
+Temporary commit content 2789
