Added validation for user input

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -154,3 +154,4 @@ Temporary commit content 1502
 Temporary commit content 1512
 Temporary commit content 1532
 Temporary commit content 1545
+Temporary commit content 1553
