Updated README with new features

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -76,3 +76,4 @@ Temporary commit content 684
 Temporary commit content 688
 Temporary commit content 700
 Temporary commit content 712
+Temporary commit content 713
