Refactored code for better readability

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -110,3 +110,4 @@ Temporary commit content 1082
 Temporary commit content 1085
 Temporary commit content 1093
 Temporary commit content 1102
+Temporary commit content 1110
