Improved error handling logic

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -227,3 +227,4 @@ Temporary commit content 2395
 Temporary commit content 2412
 Temporary commit content 2421
 Temporary commit content 2432
+Temporary commit content 2467
