Refactored code for better readability

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -118,3 +118,4 @@ Temporary commit content 1138
 Temporary commit content 1144
 Temporary commit content 1159
 Temporary commit content 1165
+Temporary commit content 1169
