Added initial project plan

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -208,3 +208,4 @@ Temporary commit content 2210
 Temporary commit content 2212
 Temporary commit content 2225
 Temporary commit content 2233
+Temporary commit content 2240
