Updated README with new features

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -229,3 +229,4 @@ Temporary commit content 2421
 Temporary commit content 2432
 Temporary commit content 2467
 Temporary commit content 2472
+Temporary commit content 2479
