Updated README with new features

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -199,3 +199,4 @@ Temporary commit content 2037
 Temporary commit content 2066
 Temporary commit content 2094
 Temporary commit content 2098
+Temporary commit content 2114
