Improved error handling logic

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -100,3 +100,4 @@ Temporary commit content 955
 Temporary commit content 959
 Temporary commit content 969
 Temporary commit content 975
+Temporary commit content 988
