Refactored code for better readability

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -272,3 +272,4 @@ Temporary commit content 2869
 Temporary commit content 2877
 Temporary commit content 2880
 Temporary commit content 2892
+Temporary commit content 2912
