Added validation for user input

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -159,3 +159,4 @@ Temporary commit content 1573
 Temporary commit content 1583
 Temporary commit content 1600
 Temporary commit content 1634
+Temporary commit content 1654
