Fixed typos in documentation

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -170,3 +170,4 @@ Temporary commit content 1681
 Temporary commit content 1682
 Temporary commit content 1700
 Temporary commit content 1705
+Temporary commit content 1756
