Updated project documentation

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -259,3 +259,4 @@ Temporary commit content 2755
 Temporary commit content 2759
 Temporary commit content 2788
 Temporary commit content 2789
+Temporary commit content 2793
