Updated project documentation

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -95,3 +95,4 @@ Temporary commit content 866
 Temporary commit content 882
 Temporary commit content 883
 Temporary commit content 922
+Temporary commit content 944
