Added validation for user input

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -44,3 +44,4 @@ Temporary commit content 441
 Temporary commit content 444
 Temporary commit content 445
 Temporary commit content 446
+Temporary commit content 448
