Refactored code for better readability

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -185,3 +185,4 @@ Temporary commit content 1853
 Temporary commit content 1854
 Temporary commit content 1893
 Temporary commit content 1897
+Temporary commit content 1899
