Fixed bug in data processing script

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -177,3 +177,4 @@ Temporary commit content 1789
 Temporary commit content 1792
 Temporary commit content 1806
 Temporary commit content 1809
+Temporary commit content 1825
