Fixed bug in data processing script

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -271,3 +271,4 @@ Temporary commit content 2868
 Temporary commit content 2869
 Temporary commit content 2877
 Temporary commit content 2880
+Temporary commit content 2892
