Improved error handling logic

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -197,3 +197,4 @@ Temporary commit content 2028
 Temporary commit content 2032
 Temporary commit content 2037
 Temporary commit content 2066
+Temporary commit content 2094
