Updated project documentation

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -172,3 +172,4 @@ Temporary commit content 1700
 Temporary commit content 1705
 Temporary commit content 1756
 Temporary commit content 1757
+Temporary commit content 1758
