Updated project documentation

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -274,3 +274,4 @@ Temporary commit content 2880
 Temporary commit content 2892
 Temporary commit content 2912
 Temporary commit content 2913
+Temporary commit content 2919
