Fixed bug in data processing script

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -256,3 +256,4 @@ Temporary commit content 2725
 Temporary commit content 2734
 Temporary commit content 2754
 Temporary commit content 2755
+Temporary commit content 2759
