Improved error handling logic

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -135,3 +135,4 @@ Temporary commit content 1305
 Temporary commit content 1322
 Temporary commit content 1323
 Temporary commit content 1329
+Temporary commit content 1335
