Fixed bug in data processing script

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -101,3 +101,4 @@ Temporary commit content 959
 Temporary commit content 969
 Temporary commit content 975
 Temporary commit content 988
+Temporary commit content 998
