Updated README with new features

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -277,3 +277,4 @@ Temporary commit content 2913
 Temporary commit content 2919
 Temporary commit content 2921
 Temporary commit content 2933
+Temporary commit content 2944
