Enhanced UI responsiveness

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -63,3 +63,4 @@ Temporary commit content 603
 Temporary commit content 606
 Temporary commit content 609
 Temporary commit content 610
+Temporary commit content 613
