Updated project documentation

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -73,3 +73,4 @@ Temporary commit content 664
 Temporary commit content 666
 Temporary commit content 667
 Temporary commit content 684
+Temporary commit content 688
