Updated project documentation

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -268,3 +268,4 @@ Temporary commit content 2824
 Temporary commit content 2832
 Temporary commit content 2863
 Temporary commit content 2868
+Temporary commit content 2869
