Improved error handling logic

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -169,3 +169,4 @@ Temporary commit content 1680
 Temporary commit content 1681
 Temporary commit content 1682
 Temporary commit content 1700
+Temporary commit content 1705
