Updated project documentation

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -36,3 +36,4 @@ Temporary commit content 372
 Temporary commit content 381
 Temporary commit content 384
 Temporary commit content 386
+Temporary commit content 394
