Improved error handling logic

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -119,3 +119,4 @@ Temporary commit content 1144
 Temporary commit content 1159
 Temporary commit content 1165
 Temporary commit content 1169
+Temporary commit content 1174
