Improved error handling logic

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -257,3 +257,4 @@ Temporary commit content 2734
 Temporary commit content 2754
 Temporary commit content 2755
 Temporary commit content 2759
+Temporary commit content 2788
