Optimized database queries

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -191,3 +191,4 @@ Temporary commit content 1938
 Temporary commit content 1945
 Temporary commit content 1969
 Temporary commit content 1970
+Temporary commit content 2014
