Enhanced UI responsiveness

--- a/ghjf/index.html
+++ b/ghjf/index.html
@@ -70,3 +70,4 @@ Temporary commit content 630
 Temporary commit content 636
 Temporary commit content 643
 Temporary commit content 664
+Temporary commit content 666
